traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: Boolean does not take parameters
override def run() {def positionFinale() {if (estFaceMur()(&&getDirection()==Direction.EST)) {gauche();return estFaceMur()}
                                                          ^Snake:3: warning: enclosing method positionFinale has result type Unit: return value discarded
override def run() {def positionFinale() {if (estFaceMur()(&&getDirection()==Direction.EST)) {gauche();return estFaceMur()}
                                                                                                       ^Snake:4: warning: enclosing method positionFinale has result type Unit: return value discarded
                                           if (estFaceMur() && getDirection() == Direction.OUEST) {droite();return estFaceMur();}
                                                                                                            ^Snake:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                                         else {return false}}
                                                      ^Snake:5: warning: enclosing method positionFinale has result type Unit: return value discarded
                                         else {return false}}
                                               ^Snake:7: error: value unary_! is not a member of Unit
                    def marche() {while (!positionFinale()) 
                                         ^